--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,5 +1,15 @@
-- @posts.each do |post|
+%div{"ng-controller"=>"PostsCtrl"}
   %h1
-    = post.title
-  %p
-    = post.content
+    {{heading}}
+  / %li{"ng-repeat"=>"post in posts"}
+  /   %h2
+  /     {{post.title}}
+  /   %p
+  /     {{post.content}}
+
+
+/ - @posts.each do |post|
+/   %h1
+/     = post.title
+/   %p
+/     = post.content
