--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,11 +1,11 @@
 %div{"ng-controller"=>"PostsCtrl"}
   %h1
     {{heading}}
-  / %li{"ng-repeat"=>"post in posts"}
-  /   %h2
-  /     {{post.title}}
-  /   %p
-  /     {{post.content}}
+  %li{"ng-repeat"=>"post in posts"}
+    %h2
+      {{post.title}}
+    %p
+      {{post.content}}
 
 
 / - @posts.each do |post|
