--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -16,6 +16,9 @@
   %li{"ng-repeat"=>"post in posts"}
     %h2
       {{post.title}}
+      %p{"ng-click"=>"destroy()"}
+        Some content
+      =link_to "Text", "#", "ng-click"=>"destroy()"
     %p
       {{post.content}}
 
