Destroy link recognizes associated post object.

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -18,7 +18,7 @@
       {{post.title}}
       %p{"ng-click"=>"destroy()"}
         Some content
-      =link_to "Text", "#", "ng-click"=>"destroy()"
+      =link_to "Text", "#", "ng-click"=>"destroy(post)"
     %p
       {{post.content}}
 
