--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -16,9 +16,9 @@
   %li{"ng-repeat"=>"post in posts"}
     %h2
       {{post.title}}
-      %p{"ng-click"=>"destroy()"}
-        Some content
-      =link_to "Text", "#", "ng-click"=>"destroy(post)"
+      =link_to "X", "#", "ng-click"=>"destroy(post)"
+    %form
+      %input{"type"=>"text", "name"=>"title", "id"=>"title", "ng-model"=>"post.title"}
     %p
       {{post.content}}
 
