--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -14,12 +14,12 @@
       {{newPost.description}}
     %input{"type"=>"submit"}  
   %li{"ng-repeat"=>"post in posts"}
-    %h2{"ng-click"=>"titleForm = !titleForm", "ng-show"=>"!titleForm"}
+    %h2{"ng-dblclick"=>"titleForm = !titleForm", "ng-show"=>"!titleForm"}
       {{post.title}}
+    %form{"ng-submit"=>"update(post)"}
+      %input{"type"=>"text", "name"=>"title", "id"=>"title", "ng-model"=>"post.title", "ng-show"=>"titleForm", "ng-init"=>"titleForm = false"}
     %h2  
       =link_to "X", "#", "ng-click"=>"destroy(post)"
-    %form
-      %input{"type"=>"text", "name"=>"title", "id"=>"title", "ng-model"=>"post.title", "ng-show"=>"titleForm", "ng-init"=>"titleForm = false"}
     %p
       {{post.content}}
 
