Guest users can post and logout.
Still need to work on some styles with bootstrap.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
- *= require_self
+ * Must use @import to require other files when using Bootstrap.
  */
+@import "bootstrap-sprockets";
+@import "bootstrap";
