--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -23,8 +23,11 @@
         %textarea.form-control{"name"=>"content", "id"=>"content", "ng-model"=>"newPost.content"}
         %p
           {{newPost.content}}
+        %div.col-md-12.spacer
       %div.col-md-4.col-md-offset-4
-        %input.form-control.btn.btn-info{"type"=>"submit"}    
+        %input.form-control.btn.btn-info{"type"=>"submit"}
+  %div.col-md-12.spacer
+  %div.col-md-12.spacer    
   %ul
     %li.list-unstyled.col-md-4{"ng-repeat"=>"post in posts"}
       %div.panel.panel-primary
