--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -15,17 +15,26 @@
           Title
       
         %input.form-control{"type"=>"text", "name"=>"title", "id"=>"title", "ng-model"=>"newPost.title"}
-        %p
-          {{newPost.title}}
       %div.col-md-8.col-md-offset-2
         %label{"for"=>"content"}
           Memo
         %textarea.form-control{"name"=>"content", "id"=>"content", "ng-model"=>"newPost.content"}
-        %p
-          {{newPost.content}}
+        
         %div.col-md-12.spacer
       %div.col-md-4.col-md-offset-4
         %input.form-control.btn.btn-info{"type"=>"submit"}
+  %div.col-md-12.spacer
+  %div.col-md-12.spacer
+  %h2
+    Post Preview:
+  %div.col-md-4
+    %div.panel.panel-primary
+      %div.panel-heading
+        %h2.panel-title.text-center
+          {{newPost.title}}
+      %div.panel-body
+        %p
+          {{newPost.content}}
   %div.col-md-12.spacer
   %div.col-md-12.spacer    
   %ul
